# sonic-frameworks-windowsystem

./: .clang-format  .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  project.config
autotests/: CMakeLists.txt  kkeyserver_x11_unittest.cpp  kwindoweffectstest.cpp  kwindowinfox11test.cpp  kwindowsystem_platform_wayland_test.cpp  kwindowsystemx11test.cpp  netrootinfotestwm.cpp  netwininfotestclient.cpp
poqm/nan_TW@latin/: kwindowsystem6_qt.po
src/: CMakeLists.txt  kkeyserver.cpp  kkeyserver.h  kstartupinfo.cpp  kstartupinfo.h  kusertimestamp.cpp  kusertimestamp.h  kwaylandextras.cpp  kwaylandextras.h  kwaylandextras_interface.cpp  kwaylandextras_interface_p.h  kwindoweffects.cpp  kwindoweffects.h  kwindoweffects_dummy.cpp  kwindoweffects_dummy_p.h  kwindoweffects_p.h  kwindowinfo.cpp  kwindowinfo.h  kwindowsystem.cpp  kwindowsystem.h  kwindowsystem_dummy_p.h  kwindowsystem_p.h  kx11extras.cpp  kx11extras.h  kxcbevent_p.h  kxerrorhandler.cpp  netwm_def.h  pluginwrapper.cpp  waylandxdgactivationv1.cpp  waylandxdgactivationv1_p.h
src/qml/: CMakeLists.txt  kwindowsystemplugin.cpp  types.h
src/qml/examples/: forceActiveWindow.qml  platform.qml
src/wayland/: CMakeLists.txt  waylandplugin.cpp  waylandplugin.h  waylandplugin.json
tests/: CMakeLists.txt  backgroundcontrasttest.cpp
